@@ -1,3 +1,12 @@
+2010-11-16  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR other/42670
+	PR binutils/11137
+	* cp-demangle.c (d_make_demangle_mangled_name): New.
+	(d_demangle_callback): Use it on DCT_GLOBAL_XTORS.
+
+	* testsuite/demangle-expected: Updated.
+
 2010-11-14  Kai Tietz  <kai.tietz@onevision.com>
 
 	* simple-object-coff.c (simple_object_coff_read_strtab): Fix reading
